plugins {
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.7'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '5.1.0'
}

repositories {
    mavenCentral()
}

javafx {
    modules = ["javafx.controls", "javafx.fxml"]
}


group 'CS'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.11


dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile "org.openjfx:javafx-graphics:11:win"
    testCompile 'org.testfx:testfx-junit:4.0+'
}
shadowJar {
    baseName = 'lightproj'
}


mainClassName = "application.Main"

test {
    sourceSets {
        main.java.setOutputDir(file("build/classes/java/test"))
    }
    scanForTestClasses = false
    include "**/*Test.class"
    jvmArgs(
            '--add-exports=javafx.graphics/com.sun.javafx.application=org.testfx',
//            '--add-exports=javafx.graphics/com.sun.glass.ui=org.testfx.monocle',
            '--add-exports=lightmoduleproj/application=javafx.fxml',
            '--add-opens=lightmoduleproj/application=javafx.fxml',
            '--add-opens=javafx.graphics/com.sun.glass.ui=org.testfx'
    )

}

